# crm

./: .gitignore  package-lock.json  pyproject.toml
client/: models.py
crm/: settings.py  urls.py
development/: admin.py  exceptions.py  models.py  serializers.py  urls.py  views.py
development/migrations/: 0001_initial.py  0002_sprint_name_team_name.py  0003_team_lead.py
frontend/: package-lock.json
frontend/src/components/app/: App.js
frontend/src/components/development/: Home.js  UserProvider.js
frontend/src/components/development/project/: ProjectCreate.js  ProjectList.js
frontend/src/components/development/team/: TeamCreate.js  TeamDetail.js  TeamList.js
users/: models.py  serializers.py  urls.py
users/migrations/: 0001_initial.py  0002_user_team.py
